fix header alignment as screen size changes

--- a/src/Components/NavBar/Header.css
+++ b/src/Components/NavBar/Header.css
@@ -15,6 +15,7 @@
   width: 100vw;
   z-index: 10;
   border-bottom: 1px solid #b8c6db;
+  align-content: center;
 }
 
 .header__logo {
